--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <title>Langrisser Overdrive</title>
- </head>
+    <head>
+        <title>Langrisser Overdrive</title>
+    </head>
 
- <body>
-   <div id="htmlhello">
-	<p>Hello!</p>
-   </div>
+    <body>
 
+        <div id="htmlhello">
+            <p>Hello!</p>
+        </div>
    
- </body>
+        <div class="container">
+            <table>
+              <thead>
+                <tr>
+                  <th colspan="2"><h1>Langrisser Oveerdrive Tasks</h1></th>
+                </tr>
+                <tr>
+                  <th>Priority</th>
+                  <th>Task</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="left"><h3>1</h3></td>
+                  <td>Add Well formatted Table Example</td>
+                </tr>
+                <tr>
+                  <td class="left"><h3>2</h3></td>
+                  <td>Automated Deployment Pipeline</td>      
+                </tr>
+                <tr>
+                  <td class="left"><h3>3</h3></td>
+                  <td>Menu</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+    </body>
+
 </html>
