--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
     <head>
         <title>Langrisser Overdrive</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+        <nav>
+            <ul>
+                <li>Characters</li>
+                <li>Content</li>
+                <li>Teams</li>
+                <li>Guides</li>
+                <li>About</li>
+              </ul>     
+        </nav>
 
         <div id="htmlhello">
             <p>Hello!</p>
@@ -32,8 +42,12 @@
                 </tr>
                 <tr>
                   <td class="left"><h3>3</h3></td>
-                  <td>Menu</td>
+                  <td>Nav Menu</td>
                 </tr>
+                <tr>
+                    <td class="left"><h3>100</h3></td>
+                    <td>Add Semantic HTML</td>
+                  </tr>
               </tbody>
             </table>
           </div>
