--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Langrisser Overdrive</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
+    <header>Langrisser Overdrive</header>
     <body>
         <nav>
             <ul>
@@ -16,11 +16,15 @@
               </ul>     
         </nav>
 
-        <div id="htmlhello">
-            <p>Hello!</p>
-        </div>
+        <main>
+            <section id="intro">
+                <article>
+                    <p>This page is about the mobile game for the Langrisser series, Langrisser Mobile. </p>
+                </article>
+            </section>
+       
    
-        <div class="container">
+        <div class="container" id=""todotable>
             <table>
               <thead>
                 <tr>
@@ -52,6 +56,8 @@
             </table>
           </div>
 
+        </main>
+        <footer>Footer Information Here</footer>
     </body>
 
 </html>
