--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
         <title>Langrisser Overdrive</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <header>Langrisser Overdrive</header>
-    <body>
-        <nav>
-            <ul>
-                <li>Characters</li>
-                <li>Content</li>
-                <li>Teams</li>
-                <li>Guides</li>
-                <li>About</li>
-              </ul>     
-        </nav>
+
+   <body>
+        <div class="header">
+            <div class="container">
+                <h1>Innovation Cloud</h1>
+                <p>Connect your ideas globally</p>
+                <a class="btn" href="#">Learn More</a>
+            </div>
+        </div>
+        
+        <div class="nav">
+            <div class="container">
+                <ul>
+                    <li>Characters</li>
+                    <li>Content</li>
+                    <li>Teams</li>
+                    <li>Guides</li>
+                    <li>About</li>
+                </ul>
+            </div>   
+        </div>
 
         <main>
             <section id="intro">
