--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <table>
               <thead>
                 <tr>
-                  <th colspan="2"><h1>Langrisser Oveerdrive Tasks</h1></th>
+                  <th colspan="2"><h1>Langrisser Overdrive Tasks</h1></th>
                 </tr>
                 <tr>
                   <th>Priority</th>
